fix nav spacing

--- a/src/components/styles/nav.scss
+++ b/src/components/styles/nav.scss
@@ -61,7 +61,7 @@
     gap: 50px;
     background-color: rgba(0, 0, 0, 0.7);
     top: 0;
-    padding-top: 80px;
+    padding-top: 30px;
     backdrop-filter: blur(10px);
     transition: 0.3s ease;
     transform: translateY(-100%);
